--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <img src="" alt="Logo">
+        <img src="adi_logo.png" alt="Logo" width="70">
         <nav>
             <ul>
                 <li><a href="#about">About Us</a></li>
